--- a/style.css
+++ b/style.css
@@ -118,6 +118,43 @@ body{
     display: flex;
     gap: 2rem;
 }
+#about {
+    padding: 40px 0;
+}
+
+.title h1 {
+    font-size: 2.5rem;
+    color: #2c3e50;
+}
+
+.p {
+    font-size: 1rem;
+    color: #7f8c8d;
+    line-height: 1.3;
+    max-width: 600px;
+   
+}
+
+.right-side h2 {
+    font-size: 1.8rem;
+    color: #a5b8cb;
+    margin-bottom: 15px;
+}
+
+.tech-list {
+    list-style: none;
+    padding: 0;
+}
+
+.tech-list li {
+    font-size: 1rem;
+    color: #817c7c;
+    margin-bottom: 10px;
+}
+
+.tech-list strong {
+    color: #3498db; /* Blue highlight for labels */
+}
 
 
 li{
